server/src/qrunesModes/embeddedModeImpl/qcodes/antlr/qcodeParser.ts
// Generated from qcode.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { qcodeListener } from './qcodeListener';
import { qcodeVisitor } from './qcodeVisitor';


export class qcodeParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly LET=3;
	public static readonly INCLUDE=4;
	public static readonly INT=5;
	public static readonly BOOL=6;
	public static readonly IF=7;
	public static readonly ELSE=8;
	public static readonly FOR=9;
	public static readonly LIB=10;
	public static readonly QRUNES=11;
	public static readonly AVAR=12;
	public static readonly DOUBLE=13;
	public static readonly DEFAULT=14;
	public static readonly MAP=15;
	public static readonly IN=16;
	public static readonly VECTOR=17;
	public static readonly PI=18;
	public static readonly RETURN=19;
	public static readonly LAMBDA=20;
	public static readonly BREAK=21;
	public static readonly CONTINUE=22;
	public static readonly TRUE=23;
	public static readonly FALSE=24;
	public static readonly QUBIT=25;
	public static readonly CBIT=26;
	public static readonly CIRCUIT=27;
	public static readonly QPROG=28;
	public static readonly VARIATIONALCIRCUIT=29;
	public static readonly HAMILTONIAN=30;
	public static readonly VQG_CNOT_VCGEN=31;
	public static readonly VQG_RZ_VCGEN=32;
	public static readonly VQG_RX_VCGEN=33;
	public static readonly H_GATE=34;
	public static readonly X_GATE=35;
	public static readonly NOT_GATE=36;
	public static readonly T_GATE=37;
	public static readonly S_GATE=38;
	public static readonly Y_GATE=39;
	public static readonly Z_GATE=40;
	public static readonly X1_GATE=41;
	public static readonly Y1_GATE=42;
	public static readonly Z1_GATE=43;
	public static readonly U4_GATE=44;
	public static readonly RX_GATE=45;
	public static readonly RY_GATE=46;
	public static readonly RZ_GATE=47;
	public static readonly TOFFOLI_GATE=48;
	public static readonly CNOT_GATE=49;
	public static readonly CZ_GATE=50;
	public static readonly CR_GATE=51;
	public static readonly CU_GATE=52;
	public static readonly ISWAP=53;
	public static readonly APPLY_QGATE=54;
	public static readonly MEASURE=55;
	public static readonly MEASUREALL=56;
	public static readonly QIF=57;
	public static readonly QWHILE=58;
	public static readonly QELSE=59;
	public static readonly WHILE=60;
	public static readonly SHARP_SIGN=61;
	public static readonly ASSIGN=62;
	public static readonly GT=63;
	public static readonly LT=64;
	public static readonly BANG=65;
	public static readonly TILDE=66;
	public static readonly COLON=67;
	public static readonly EQUAL=68;
	public static readonly LE=69;
	public static readonly GE=70;
	public static readonly NOTEQUAL=71;
	public static readonly LOGIC_AND=72;
	public static readonly LOGIC_OR=73;
	public static readonly AND=74;
	public static readonly EXCLU=75;
	public static readonly INCLU=76;
	public static readonly QUE_MARK=77;
	public static readonly INC=78;
	public static readonly DEC=79;
	public static readonly ADD=80;
	public static readonly SUB=81;
	public static readonly MUL=82;
	public static readonly POW=83;
	public static readonly DIV=84;
	public static readonly MOD=85;
	public static readonly ADD_ASSIGN=86;
	public static readonly SUB_ASSIGN=87;
	public static readonly MUL_ASSIGN=88;
	public static readonly DIV_ASSIGN=89;
	public static readonly MOD_ASSIGN=90;
	public static readonly SHIFT_LEFT=91;
	public static readonly SHIFT_RIGHT=92;
	public static readonly LBRACE=93;
	public static readonly RBRACE=94;
	public static readonly SEMI=95;
	public static readonly COMMA=96;
	public static readonly DOT=97;
	public static readonly LPAREN=98;
	public static readonly RPAREN=99;
	public static readonly LBRACK=100;
	public static readonly RBRACK=101;
	public static readonly Identifier=102;
	public static readonly Integer_Literal=103;
	public static readonly Double_Literal=104;
	public static readonly Digit_Sequence=105;
	public static readonly WhiteSpace=106;
	public static readonly SingleLineComment=107;
	public static readonly MultiLinesComment=108;
	public static readonly RULE_qrunes = 0;
	public static readonly RULE_lang_unit = 1;
	public static readonly RULE_declaration = 2;
	public static readonly RULE_include_declaration = 3;
	public static readonly RULE_include_sign = 4;
	public static readonly RULE_variable_declaration = 5;
	public static readonly RULE_parameter_declaration = 6;
	public static readonly RULE_parameter_specifier = 7;
	public static readonly RULE_quantum_alg_built_in_type = 8;
	public static readonly RULE_auxiliary_primary_type = 9;
	public static readonly RULE_quantum_circuit_type = 10;
	public static readonly RULE_quantum_prog_type = 11;
	public static readonly RULE_quantum_primary_type = 12;
	public static readonly RULE_classical_primary_type = 13;
	public static readonly RULE_array_construct_type = 14;
	public static readonly RULE_construct_primary_type = 15;
	public static readonly RULE_call_back_construct_type = 16;
	public static readonly RULE_call_back_primary_type_list = 17;
	public static readonly RULE_call_back_primary_type = 18;
	public static readonly RULE_declaration_variable = 19;
	public static readonly RULE_variable_decl_specifier = 20;
	public static readonly RULE_common_specifier = 21;
	public static readonly RULE_init_declaratorlist = 22;
	public static readonly RULE_variable_declarator = 23;
	public static readonly RULE_variableInitializer = 24;
	public static readonly RULE_function_declaration = 25;
	public static readonly RULE_declarate_function = 26;
	public static readonly RULE_function_return_type_declarator = 27;
	public static readonly RULE_function_declarator = 28;
	public static readonly RULE_function_name = 29;
	public static readonly RULE_parameter_decl_list = 30;
	public static readonly RULE_expression_list = 31;
	public static readonly RULE_vector_expression = 32;
	public static readonly RULE_vector_slice = 33;
	public static readonly RULE_single_expression = 34;
	public static readonly RULE_lambda_exp = 35;
	public static readonly RULE_lambda_body = 36;
	public static readonly RULE_additive_op = 37;
	public static readonly RULE_multiplicative_op = 38;
	public static readonly RULE_shift_op = 39;
	public static readonly RULE_assign_op = 40;
	public static readonly RULE_equal_op = 41;
	public static readonly RULE_relationship_op = 42;
	public static readonly RULE_logic_op = 43;
	public static readonly RULE_unary_op = 44;
	public static readonly RULE_statement = 45;
	public static readonly RULE_while_statement = 46;
	public static readonly RULE_return_statement = 47;
	public static readonly RULE_qif_statement = 48;
	public static readonly RULE_qif_true_branch = 49;
	public static readonly RULE_qif_false_branch = 50;
	public static readonly RULE_qwhile_statement = 51;
	public static readonly RULE_expression_statement = 52;
	public static readonly RULE_empty_statement = 53;
	public static readonly RULE_declaration_variable_statement = 54;
	public static readonly RULE_compound_statement = 55;
	public static readonly RULE_select_statement = 56;
	public static readonly RULE_iterate_statement = 57;
	public static readonly RULE_for_stmt = 58;
	public static readonly RULE_for_step = 59;
	public static readonly RULE_for_condition = 60;
	public static readonly RULE_for_start = 61;
	public static readonly RULE_inhanced_for_stmt = 62;
	public static readonly RULE_statement_list = 63;
	public static readonly RULE_function_definition = 64;
	public static readonly RULE_function_body = 65;
	public static readonly RULE_key_words = 66;
	public static readonly RULE_constant = 67;
	public static readonly ruleNames: string[] = [
		"qrunes", "lang_unit", "declaration", "include_declaration", "include_sign", 
		"variable_declaration", "parameter_declaration", "parameter_specifier", 
		"quantum_alg_built_in_type", "auxiliary_primary_type", "quantum_circuit_type", 
		"quantum_prog_type", "quantum_primary_type", "classical_primary_type", 
		"array_construct_type", "construct_primary_type", "call_back_construct_type", 
		"call_back_primary_type_list", "call_back_primary_type", "declaration_variable", 
		"variable_decl_specifier", "common_specifier", "init_declaratorlist", 
		"variable_declarator", "variableInitializer", "function_declaration", 
		"declarate_function", "function_return_type_declarator", "function_declarator", 
		"function_name", "parameter_decl_list", "expression_list", "vector_expression", 
		"vector_slice", "single_expression", "lambda_exp", "lambda_body", "additive_op", 
		"multiplicative_op", "shift_op", "assign_op", "equal_op", "relationship_op", 
		"logic_op", "unary_op", "statement", "while_statement", "return_statement", 
		"qif_statement", "qif_true_branch", "qif_false_branch", "qwhile_statement", 
		"expression_statement", "empty_statement", "declaration_variable_statement", 
		"compound_statement", "select_statement", "iterate_statement", "for_stmt", 
		"for_step", "for_condition", "for_start", "inhanced_for_stmt", "statement_list", 
		"function_definition", "function_body", "key_words", "constant"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'\"'", "'''", "'let'", "'include'", "'int'", "'bool'", "'if'", 
		"'else'", "'for'", "'lib'", "'qrunes'", "'avar'", "'double'", "'default'", 
		"'map'", "'in'", "'vector'", "'Pi'", "'return'", "'lambda'", "'break'", 
		"'continue'", "'true'", "'false'", "'qubit'", "'cbit'", "'circuit'", "'qprog'", 
		"'variationalCircuit'", "'hamiltonian'", "'VQG_CNOT'", "'VQG_RZ'", "'VQG_RX'", 
		"'H'", "'X'", "'NOT'", "'T'", "'S'", "'Y'", "'Z'", "'X1'", "'Y1'", "'Z1'", 
		"'U4'", "'RX'", "'RY'", "'RZ'", "'Toffoli'", "'CNOT'", "'CZ'", "'CR'", 
		"'CU'", "'iSWAP'", "'apply_QGate'", "'measure'", "'measure_all'", "'qif'", 
		"'qwhile'", "'qelse'", "'while'", "'#'", "'='", "'>'", "'<'", "'!'", "'~'", 
		"':'", "'=='", "'<='", "'>='", "'!='", "'&&'", "'||'", "'&'", "'^'", "'|'", 
		"'?'", "'++'", "'--'", "'+'", "'-'", "'*'", "'**'", "'/'", "'%'", "'+='", 
		"'-='", "'*='", "'/='", "'%='", "'<<'", "'>>'", "'{'", "'}'", "';'", "','", 
		"'.'", "'('", "')'", "'['", "']'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, "LET", "INCLUDE", "INT", "BOOL", "IF", 
		"ELSE", "FOR", "LIB", "QRUNES", "AVAR", "DOUBLE", "DEFAULT", "MAP", "IN", 
		"VECTOR", "PI", "RETURN", "LAMBDA", "BREAK", "CONTINUE", "TRUE", "FALSE", 
		"QUBIT", "CBIT", "CIRCUIT", "QPROG", "VARIATIONALCIRCUIT", "HAMILTONIAN", 
		"VQG_CNOT_VCGEN", "VQG_RZ_VCGEN", "VQG_RX_VCGEN", "H_GATE", "X_GATE", 
		"NOT_GATE", "T_GATE", "S_GATE", "Y_GATE", "Z_GATE", "X1_GATE", "Y1_GATE", 
		"Z1_GATE", "U4_GATE", "RX_GATE", "RY_GATE", "RZ_GATE", "TOFFOLI_GATE", 
		"CNOT_GATE", "CZ_GATE", "CR_GATE", "CU_GATE", "ISWAP", "APPLY_QGATE", 
		"MEASURE", "MEASUREALL", "QIF", "QWHILE", "QELSE", "WHILE", "SHARP_SIGN", 
		"ASSIGN", "GT", "LT", "BANG", "TILDE", "COLON", "EQUAL", "LE", "GE", "NOTEQUAL", 
		"LOGIC_AND", "LOGIC_OR", "AND", "EXCLU", "INCLU", "QUE_MARK", "INC", "DEC", 
		"ADD", "SUB", "MUL", "POW", "DIV", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", 
		"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "SHIFT_LEFT", "SHIFT_RIGHT", 
		"LBRACE", "RBRACE", "SEMI", "COMMA", "DOT", "LPAREN", "RPAREN", "LBRACK", 
		"RBRACK", "Identifier", "Integer_Literal", "Double_Literal", "Digit_Sequence", 
		"WhiteSpace", "SingleLineComment", "MultiLinesComment"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(qcodeParser._LITERAL_NAMES, qcodeParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return qcodeParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "qcode.g4"; }

	@Override
	public get ruleNames(): string[] { return qcodeParser.ruleNames; }

	@Override
	public get serializedATN(): string { return qcodeParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(qcodeParser._ATN, this);
	}
	@RuleVersion(0)
	public qrunes(): QrunesContext {
		let _localctx: QrunesContext = new QrunesContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, qcodeParser.RULE_qrunes);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << qcodeParser.LET) | (1 << qcodeParser.INCLUDE) | (1 << qcodeParser.INT) | (1 << qcodeParser.BOOL) | (1 << qcodeParser.AVAR) | (1 << qcodeParser.DOUBLE) | (1 << qcodeParser.MAP) | (1 << qcodeParser.VECTOR) | (1 << qcodeParser.QUBIT) | (1 << qcodeParser.CBIT) | (1 << qcodeParser.CIRCUIT) | (1 << qcodeParser.QPROG) | (1 << qcodeParser.VARIATIONALCIRCUIT) | (1 << qcodeParser.HAMILTONIAN))) !== 0) || _la===qcodeParser.Identifier) {
				{
				{
				this.state = 136;
				this.lang_unit();
				}
				}
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public lang_unit(): Lang_unitContext {
		let _localctx: Lang_unitContext = new Lang_unitContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, qcodeParser.RULE_lang_unit);
		try {
			this.state = 144;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,1,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 142;
				this.declaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 143;
				this.function_definition();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, qcodeParser.RULE_declaration);
		try {
			this.state = 149;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,2,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 146;
				this.include_declaration();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 147;
				this.variable_declaration();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 148;
				this.function_declaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public include_declaration(): Include_declarationContext {
		let _localctx: Include_declarationContext = new Include_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, qcodeParser.RULE_include_declaration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this.match(qcodeParser.INCLUDE);
			this.state = 152;
			this.include_sign();
			this.state = 153;
			this.single_expression(0);
			this.state = 154;
			this.include_sign();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public include_sign(): Include_signContext {
		let _localctx: Include_signContext = new Include_signContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, qcodeParser.RULE_include_sign);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			_la = this._input.LA(1);
			if ( !(_la===qcodeParser.T__0 || _la===qcodeParser.T__1) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public variable_declaration(): Variable_declarationContext {
		let _localctx: Variable_declarationContext = new Variable_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, qcodeParser.RULE_variable_declaration);
		try {
			this.state = 160;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,3,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 158;
				this.declaration_variable();
				}
				break;
